# happyrobot-carrier-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example.env  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  deploy.yaml
app/: __main__.py  app.py  database.py  schemas.py
app/clients/: fmcsa.py
app/core/: config.py  log.py  security.py
app/routers/: carriers.py  demo.py  loads.py
data/: datatable.md  loads.db
docs/: carriers.md  database.md  deployment.md
infrastructure/terraform/: .terraform.lock.hcl  bootstrap.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: register-providers.sh
tests/: conftest.py  test_app.py
