[project]
name = "happyrobot-carriere-api"
version = "0.1.0"
description = "HappyRobot Inbound Carrier Robot API Server"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[all]>=0.119.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "sap-ai-sdk-gen[all]>=5.10.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "pylint>=4.0.0",
    "pytest>=8.4.2",
]

[tool.pylint.main]
max-line-length = 120
ignore = ["tests", "notebooks"]
ignore-paths = []
load-plugins = []

[tool.pylint.messages_control]
disable = []

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
package-mode = false

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
